# pe-portfolio-site

./: .dockerignore  .gitignore  Dockerfile  content.yaml  curl-test.sh  docker-compose.override.yml  docker-compose.yml  example.env  portfolio.service  pyproject.toml  redeploy-portfolio.sh  redeploy-site.sh  requirements.txt  run_test.sh
.github/workflows/: deploy.yml
app/: __init__.py
app/static/js/: timeline.js  travel.js
app/static/styles/: main.css
app/templates/: base.html  card.html  experience_section.html  hobbies.html  index.html  intro.html  projects.html  timeline.html  travel.html
app/templates/partials/: about-me.html
nginx/templates/: portfolio.conf.template
tests/: test_app.py  test_db.py
user_conf.d/: portfolio.conf
