[project]
name = "pe-portfolio-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "peewee>=4.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[tool.flask]
app = "app"
